@@ -1,3 +1,7 @@
+2005-04-14  Olivier Andrieu  <oliv__a@users.sourceforge.net>
+
+	* Makefile.am: silence cmp
+
 2005-04-13  Matthew Gregan  <kinetik@orcon.net.nz>
 
 	* tests/t_netsync_largish_file.at: Add test for netsyncing largish
